--- a/css/12bool.css
+++ b/css/12bool.css
@@ -1,7 +1,7 @@
 /*     CONTAINER   */
 
 .container {
-    max-width: 1170px;
+    max-width: 100vw;
     margin: 0 auto;
 }
 
@@ -20,6 +20,14 @@
     flex-grow: 1;
     flex-basis: 0;
     max-width: 100%;
+    background-color: red;
+}
+
+.col-blue {
+    background-color: #006CFA;
+    color: white;
+    border: 1px solid white;
+    padding: 10px 30px;
 }
 
 .col-1 {
