--- a/css/12bool.css
+++ b/css/12bool.css
@@ -1,3 +1,9 @@
+/* 
+        --------------------
+          FRAMEWORK 12BOOL
+        --------------------
+*/
+
 /*     CONTAINER   */
 
 .container {
